<resources>
    <string name="app_name">CAKE</string>
    <string name="app_name_2">CAKE</string>
    <string name="notification_channel_id">Hat</string>
    <string name="api_key" translatable="false">AIzaSyAmD_A7N-SI2JbkhGh4xY_OFip7GtQRZfg</string>
    <string name="no_network">Something wrong please try again</string>
    <string name="session_expired">Session has expired, please login again.</string>
    <string name="user_deleted">User Has been deleted by the system</string>
    <string name="notification_channel_name" translatable="false">Haat</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="must_login">you have to login</string>
    <string name="invalid_link">Invalid Link</string>
    <string name="invalid_mail">Invalid Email</string>
    <string name="invalid_phone">Invalid Phone</string>
    <string name="invalid_code">Invalid code</string>
    <string name="invalid_coupon">Invalid coupon</string>
    <string name="valid_coupon">valid coupon</string>
    <string name="enter_code_">enter code</string>
    <string name="required">required field</string>
    <string name="ok">ok</string>
    <string name="ok_">ok</string>
    <string name="cancel">cancel</string>
    <string name="call">call</string>
    <string name="call_instructions">Please use the call as absolutely necessary, and upon completion must write everything agreed upon within the conversation</string>
    <string name="home">Home</string>
    <string name="house">Home</string>
    <string name="driver">driver</string>
    <string name="password_mismatch">password mismatch</string>
    <string name="password_minimum">minimum password is 6 character</string>
    <string name="no_data">No data</string>
    <string name="notifications">Notifications</string>
    <string name="orders">Orders</string>
    <string name="journey">Journey</string>
    <string name="me">Me</string>
    <string name="search_for_store">search for a store</string>
    <string name="all">All</string>
    <string name="resturant">restaurant</string>
    <string name="km">km</string>
    <string name="meter">meter</string>
    <string name="my_profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="comments">Ratings</string>
    <string name="setting">Setting</string>
    <string name="active">Active</string>
    <string name="finished">Finished</string>
    <string name="order_details">order details</string>
    <string name="order_number">order number</string>
    <string name="waiting_order">New</string>
    <string name="stores_info">order</string>
    <string name="delivering_location">delivering location</string>
    <string name="receiving_location">receiving location</string>
    <string name="recieving_location">receiving location</string>
    <string name="email">email</string>
    <string name="enter_email">enter email</string>
    <string name="password">password</string>
    <string name="enter_pasword">enter pasword</string>
    <string name="confirm">confirm</string>
    <string name="not_have_account"><u>dont have account</u></string>
    <string name="to_use_this_app_u_accept">by using this app you are accepting</string>
    <string name="please_accept_condition">Please agree to Haat Captain terms of work</string>
    <string name="policy_terms"><u>policy use terms</u></string>
    <string name="new_account">new account</string>
    <string name="name">full name</string>
    <string name="client_name">visitor</string>
    <string name="enter_full_name">enter full name</string>
    <string name="go">go</string>
    <string name="user_rates">user rates</string>
    <string name="show_times">show times</string>
    <string name="menu">menu</string>
    <string name="share">review</string>
    <string name="comment">comment</string>
    <string name="open">open</string>
    <string name="closed">closed</string>
    <string name="closed_now">closed now please try later</string>
    <string name="change">change</string>
    <string name="next">Next</string>
    <string name="no_reviews">no reviews yet</string>
    <string name="phone">phone number</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="scan_your_qr_code">scan your qr code</string>
    <string name="birthday">birthday</string>
    <string name="enter_birthday">your birthday</string>
    <string name="gender">gender</string>
    <string name="choose_gender">please choose gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="confirm_password">confirm password</string>
    <string name="reenter_password">reenter password</string>
    <string name="code_validation">Verification code</string>
    <string name="enter_code">please enter code that sent to your phone</string>
    <string name="resend_in">resend code again</string>
    <string name="resend_again">resend again </string>
    <string name="verify">verify</string>
    <string name="offers">Offers</string>
    <string name="away">away</string>
    <string name="delivering_time">delivery time</string>
    <string name="delivery_fee">delivery fee</string>
    <string name="delivery_fee_tax">total delivery fee</string>
    <string name="accept_offer">accept offer</string>
    <string name="refuse">refuse</string>
    <string name="cancel_order">cancel order</string>
    <string name="waiting_offers">waiting offers</string>
    <string name="order_has_been_sent">order has been sent</string>
    <string name="already_to_delivered">ready to delivered</string>
    <string name="report">report</string>
    <string name="write_your_message">write your message</string>
    <string name="complaint_details">complaint details</string>
    <string name="please_select_reason">please select reason</string>
    <string name="reason">reason</string>
    <string name="enter_complaint_details">enter complaint details</string>
    <string name="please_select_the_reason">please specify the reason</string>
    <string name="add_attachment">add attachment</string>
    <string name="send_complaint">send complaint</string>
    <string name="rate_user">rate user</string>
    <string name="rate">rate</string>
    <string name="write_rate">write comment</string>
    <string name="enter_order_details">write order details</string>
    <string name="please_enter_order_details">please write order details</string>
    <string name="add_img">add image</string>
    <string name="one_image_minimum">one image minimum</string>
    <string name="enter_bill_image">bill image required</string>
    <string name="add_copoun">add copoun</string>
    <string name="delivering_point">delivering point</string>
    <string name="receiving_point">receiving point</string>
    <string name="send_order">send order</string>
    <string name="favourites">favourites</string>
    <string name="delivering_location_confirm">confirm delivering location</string>
    <string name="additional_info">additional info</string>
    <string name="floor_unit">floor or unit</string>
    <string name="detect_delivering_location">detect delivering location</string>
    <string name="please_detect_delivering_location">please detect delivering location</string>
    <string name="added_successfully">added successfully</string>
    <string name="registred_successfully">registered successfully please login</string>
    <string name="changed_successfully">changed successfully</string>
    <string name="edited_successfully">edited successfully</string>
    <string name="delivering_time_">delivering time </string>
    <string name="please_delivering_time_">please select delivering time</string>
    <string name="distance_from_you">distance from you</string>
    <string name="save">save</string>
    <string name="edit_password">edit password</string>
    <string name="old_password">old password</string>
    <string name="enter_old_password">enter old password</string>
    <string name="new_password">new password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="reenter_new_password">reenter new password</string>
    <string name="enter_new_password">enter new password</string>
    <string name="setting_">Setting</string>
    <string name="complaint_list">complaint list</string>
    <string name="copouns">coupons</string>
    <string name="language_setting">language setting</string>
    <string name="policy">policy use</string>
    <string name="privacy">terms and conditions</string>
    <string name="rate_app">rate app</string>
    <string name="contact_us">contact us</string>
    <string name="app_language">app language</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="lorem_ipsum"> lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum </string>
    <string name="lorem_ipsum_2"> lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum  lorem_ipsum </string>
    <string name="complaints">complaints</string>
    <string name="notes">notes</string>
    <string name="attachment">attachment</string>
    <string name="accepted">acceptable</string>
    <string name="unacceptable">unacceptable</string>
    <string name="we_aplogize">Our dear customer, we apologize for the conduct of the conductor, all necessary measures will be taken towards it, and we promise you a better experience next time</string>
    <string name="waiting_processed">waiting to processed</string>
    <string name="proessed">processed</string>
    <string name="message">message</string>
    <string name="message_type">enter message header</string>
    <string name="message_topic">message header</string>
    <string name="send">send</string>
    <string name="add">add</string>
    <string name="account_details">account details</string>
    <string name="orders_num">orders number</string>
    <string name="fee">my money</string>
    <string name="total_fee">total fee</string>
    <string name="coupon">add coupon</string>
    <string name="remove_order">remove order</string>
    <string name="send_invoice">send invoice</string>
    <string name="amount">cost of the goods</string>
    <string name="enter_amount">enter cost</string>
    <string name="delivering_amount">delivery cost</string>
    <string name="total_amount">total cost including tax</string>
    <string name="invoice_img">Copy of the bill</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="add_new_ticket">add new ticket</string>
    <string name="add_">add</string>
    <string name="message_content">message content</string>
    <string name="ask">question</string>
    <string name="suggestion">suggestion</string>
    <string name="complaint">complaint</string>
    <string name="attach_img">attach image</string>
    <string name="stores">Stores</string>
    <string name="payment_method">payment method</string>
    <string name="cash">cash</string>
    <string name="visa">visa</string>
    <string name="pay">pay</string>
    <string name="payment_method_">payment method </string>
    <string name="security_code">security code</string>
    <string name="security_code_in_back">You will find the security number on the back of your card</string>
    <string name="expinsive_price">expensive delivery price</string>
    <string name="driver_ask_for_cancel">the driver ask for cancel</string>
    <string name="no_need_for_order">no need for order</string>
    <string name="driver_not_accepting_online_payment">the driver not accepting online payment</string>
    <string name="driver_ask_for_contact_outside_the_application">the driver ask for contact outside the application</string>
    <string name="alerts">Alerts</string>
</resources>