<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/shape_rounded_white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/alert_text"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:gravity="center"
        android:padding="15dp"
        android:lineSpacingExtra="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:fontFamily="@font/cairo_regular"
        android:textStyle="bold"
        android:text="@string/expinsive_price"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:fontFamily="@font/cairo_regular"
        android:textStyle="bold"
        android:text="@string/driver_ask_for_cancel"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:fontFamily="@font/cairo_regular"
        android:textStyle="bold"
        android:text="@string/no_need_for_order"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:fontFamily="@font/cairo_regular"
        android:textStyle="bold"
        android:text="@string/driver_not_accepting_online_payment"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:fontFamily="@font/cairo_regular"
        android:textStyle="bold"
        android:text="@string/driver_ask_for_contact_outside_the_application"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:background="@color/colorText"
        android:layout_height="1dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_marginStart="@dimen/_25sdp"
                android:background="@drawable/btn"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/no_id"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/no"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_35sdp"/>



            <TextView
                android:background="@drawable/shape_rounded_green_corner_4"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/yes_id"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/yes"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_weight="1"
                android:layout_height="@dimen/_35sdp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>