<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/shape_rounded_dark_grey"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:fontFamily="@font/cairo_regular"
            android:layout_centerInParent="true"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/add_new_ticket"/>

        <ImageView
            android:tint="#ec6464"
            android:id="@+id/close_img"
            android:background="@drawable/close"
            android:layout_marginStart="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


    <TextView
        android:rotation="180"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/shadow"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:fontFamily="@font/cairo_regular"
                android:id="@+id/ask_id"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/ask"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <TextView
                android:fontFamily="@font/cairo_regular"
                android:id="@+id/complain_id"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/complaint"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <TextView
                android:fontFamily="@font/cairo_regular"
                android:id="@+id/suggestion_id"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/suggestion"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:fontFamily="@font/cairo_regular"
        android:text="@string/message_content"
        android:textAlignment="viewStart"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        app:fontFamily="@font/cairo_regular"
        android:gravity="top|start"
        android:id="@+id/message_edt"
        android:padding="8dp"
        android:minHeight="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:textAlignment="viewStart"
        android:inputType="textPassword"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn1"
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:gravity="center"
            android:text="@string/attach_img"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:id="@+id/img_txt"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:background="@drawable/shape_rounded_green_corner_4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="70dp"
            android:id="@+id/selected_img"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:scaleType="centerCrop"
            app:riv_corner_radius="5dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <Button
        android:textAllCaps="false"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/add_btn"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/add_"
        android:textColor="@color/colorWhite"
        android:background="@drawable/shape_rounded_blue"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

</LinearLayout>