<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/shape_rounded_white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:fontFamily="@font/cairo_regular"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/security_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:fontFamily="@font/cairo_regular"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:lineSpacingExtra="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/security_code_in_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:fontFamily="@font/cairo_regular"
                android:background="@drawable/shape_rounded_blue"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/ok"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/ok"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>