<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_alignParentTop="true"
            android:id="@+id/lin1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorBlue"
            android:elevation="5dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_marginStart="10dp"
                android:id="@+id/frame_back"
                android:layout_gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp">

                <ImageView
                    android:id="@+id/back_img"
                    android:layout_gravity="center"
                    android:background="@drawable/arrow_left"
                    android:layout_width="12dp"
                    android:layout_height="18dp" />

            </FrameLayout>

            <TextView
                android:id="@+id/store_name"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/app_language"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_marginEnd="10dp"
                android:id="@+id/frame_share"
                android:layout_gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp">


            </FrameLayout>

        </LinearLayout>


        <RadioGroup
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/arabic_button"
                android:textSize="18sp"
                android:paddingStart="10dp"
                android:text="@string/arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:layout_marginTop="15dp"
                android:id="@+id/english_button"
                android:textSize="18sp"
                android:paddingStart="10dp"
                android:text="@string/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

    </LinearLayout>

</layout>